# cmake_minimum_required(VERSION <specify CMake version here>)
project(c_plus)

set(CMAKE_CXX_STANDARD 11)

include_directories(.)
include_directories(1)
include_directories(10)
include_directories(11)
include_directories(12/text)
include_directories(12/text/text)
include_directories(12/textquery)
include_directories(13/folder)
include_directories(13/strvec)
include_directories(14)
include_directories(15/text)
include_directories(15/text/include)
include_directories(2)
include_directories(3/test)
include_directories(4)
include_directories(5)
include_directories(6)
include_directories(7)
include_directories(8)
include_directories(9)
include_directories(gflags/code)
include_directories(ju-seatch/ju-search)
include_directories(ju-seatch/topfeed)
include_directories(ju-seatch/unise/index)
include_directories(ju-seatch/unise/retri)
include_directories(ju-seatch/unise/serve)
include_directories(ju-seatch/unise/serve/frontend)
include_directories(ju-seatch/unise/serve/frontend/ctpl)
include_directories(ju-seatch/unise/unise)
include_directories(ju-seatch/unise/util)
include_directories(ju-seatch/unise/util/http_server)
include_directories(proto)
include_directories(source/c11/1)
include_directories(source/c11/12)
include_directories(source/c11/13)
include_directories(source/c11/14)
include_directories(source/c11/15)
include_directories(source/c11/16)
include_directories(source/c11/17)
include_directories(source/c11/18)
include_directories(source/c11/19)
include_directories(source/c11/2)
include_directories(source/c11/6)
include_directories(source/c11/7)
include_directories(source/c11/9)
include_directories(test)
include_directories(test/h)

add_executable(c_plus
        1/117.cpp
        1/120.cpp
        1/2.cpp
        1/23.cpp
        1/29.cpp
        1/30.cpp
        1/char.cpp
        1/cj.cpp
        1/extern.cpp
        1/hello.cpp
        1/Sales_item.h
        10/1011.cpp
        10/1013.cpp
        10/1022.cpp
        10/1027.cpp
        10/1029.cpp
        10/1030.cpp
        10/1032.cpp
        10/104.cpp
        10/105.cpp
        10/1118.cpp
        10/accumulate.cpp
        10/back_inserter.cpp
        10/class.cpp
        10/copy.cpp
        10/count_if.cpp
        10/fill.cpp
        10/func.cpp
        10/head.h
        10/inserter.cpp
        10/isdigit.cpp
        10/iteretor.cpp
        10/lambda.cpp
        10/list.cpp
        10/name.cpp
        10/name_1.h
        10/name_2.h
        10/reverse_iterator.cpp
        10/sale_data.h
        10/sis.cpp
        10/sort_unique.cpp
        10/static.cpp
        10/strdup.cpp
        10/test.cpp
        11/1112.cpp
        11/113.cpp
        11/116.cpp
        11/119.cpp
        11/class.cpp
        11/compare.cpp
        11/find.cpp
        11/head.h
        11/iterator.cpp
        11/replace.cpp
        12/text/text/query.cc
        12/text/text/result.h
        12/text/text/text.cc
        12/text/text/text.h
        12/text/querymain.cc
        12/text/QueryResult.h
        12/text/TextQuery.cc
        12/text/TextQuery.h
        12/textquery/head.h
        12/textquery/main.cpp
        12/textquery/textquery.cpp
        12/textquery/textresult.cpp
        12/1223.cpp
        12/1224.cpp
        12/allocator.cpp
        12/class.cpp
        12/copy.cpp
        12/map.cpp
        12/set.cpp
        12/shared_ptr.cpp
        12/str_blob.cpp
        12/unique_error.cpp
        12/xy.cpp
        12/xy.i
        13/folder/folder.cpp
        13/folder/folder.h
        13/folder/foldermain.cpp
        13/strvec/string.cpp
        13/strvec/string.h
        13/strvec/strmain.cpp
        13/strvec/strT.cpp
        13/strvec/strVec.cpp
        13/strvec/strVec.h
        13/strvec/test.cpp
        13/strvec/unintializedCopy.cpp
        13/strvec/vec.cpp
        13/1313.cpp
        13/1315.cpp
        13/132.cpp
        13/1327.cpp
        13/Foo.cpp
        13/lval.cpp
        13/move.cpp
        13/rand.cpp
        13/test.cpp
        14/1430.cpp
        14/1438.cpp
        14/1439.cpp
        14/1442.cpp
        14/1444.cpp
        14/1444.h
        15/text/include/AndQuery.h
        15/text/include/BinaryQuery.h
        15/text/include/NotQuery.h
        15/text/include/OrQuery.h
        15/text/include/query_base.h
        15/text/include/WordQuery.h
        15/main.cpp
        2/216.cpp
        2/233.cpp
        2/const.cpp
        2/const_h.h
        2/conste.cpp
        2/init.cpp
        2/mystruct.cpp
        2/ptr.cpp
        2/sale_data.cpp
        2/sales_data.h
        3/test/main.cpp
        3/test/main.i
        3/test/pre.h
        3/test/son.h
        3/31.cpp
        3/311.cpp
        3/320.cpp
        3/322.cpp
        3/323.cpp
        3/325.cpp
        3/329.cpp
        3/335.cpp
        3/337.cpp
        3/339.cpp
        3/34.cpp
        3/343.cpp
        3/35.cpp
        3/36.cpp
        3/arr.cpp
        3/constt.cpp
        3/constt.i
        3/debug.cpp
        3/mvector.cpp
        3/mvt.cpp
        3/mycctype.cpp
        3/op.cpp
        3/str.cpp
        4/421.cpp
        4/433.cpp
        4/514.cpp
        4/goto.cpp
        4/head.h
        4/mcast.cpp
        4/msizeof.cpp
        4/null.cpp
        5/523.cpp
        5/head.h
        6/610.cpp
        6/621.cpp
        6/625.cpp
        6/654.cpp
        6/67.cpp
        6/arr.cpp
        6/assert.cpp
        6/assert.i
        6/c6.cpp
        6/c6.h
        6/const.cpp
        6/const.i
        6/const_cast.cpp
        6/constepr.cpp
        6/constexpr_func.cpp
        6/constexpr_func.i
        6/head.h
        6/initializer_list.cpp
        6/main.cpp
        6/ptr.cpp
        6/test.cpp
        6/vector_t.cpp
        6/xy.cpp
        7/72.cpp
        7/call.cpp
        7/char.cpp
        7/class.cpp
        7/debug.cpp
        7/explicit.cpp
        7/func.cpp
        7/head.h
        7/inline.cpp
        7/inline.i
        7/juhe.cpp
        7/mgr.h
        7/name.cpp
        7/name_1.cpp
        7/name_2.cpp
        7/person.h
        7/ps.cpp
        7/sale_data.h
        7/sale_t.cpp
        7/screen.h
        7/static.cpp
        7/t.cpp
        7/test.cpp
        7/test.i
        7/window_mgr.cpp
        8/81.cpp
        8/buf.cpp
        8/fs.cpp
        8/head.h
        8/ignore.cpp
        8/str.cpp
        8/stream.cpp
        8/string.cpp
        9/911.cpp
        9/914.cpp
        9/918.cpp
        9/92.cpp
        9/921.cpp
        9/926.cpp
        9/927.cpp
        9/928.cpp
        9/932.cpp
        9/943.cpp
        9/943_1.cpp
        9/943_2.cpp
        9/947.cpp
        9/95.cpp
        9/950.cpp
        9/950_1.cpp
        9/emplace.cpp
        9/enum.cpp
        9/head.h
        9/insert.cpp
        9/reserve.cpp
        9/stack.cpp
        9/str.cpp
        9/string.cpp
        9/test.cpp
        9/vector.cpp
        gflags/code/line.cpp
        gflags/code/line.h
        gflags/code/other.cpp
        ju-seatch/ju-search/article_doc.h
        ju-seatch/ju-search/article_doc_factory.cc
        ju-seatch/ju-search/article_doc_factory.h
        ju-seatch/ju-search/article_filler.cc
        ju-seatch/ju-search/article_filler.h
        ju-seatch/ju-search/article_global_handler.cc
        ju-seatch/ju-search/article_global_handler.h
        ju-seatch/ju-search/article_query_rewriter.cc
        ju-seatch/ju-search/article_query_rewriter.h
        ju-seatch/ju-search/article_scorer.cc
        ju-seatch/ju-search/article_scorer.h
        ju-seatch/ju-search/article_search_context.cc
        ju-seatch/ju-search/article_search_context.h
        ju-seatch/topfeed/topfeed_early_filter.cc
        ju-seatch/topfeed/topfeed_early_filter.h
        ju-seatch/topfeed/topfeed_filler.cc
        ju-seatch/topfeed/topfeed_filler.h
        ju-seatch/topfeed/topfeed_final_filter.cc
        ju-seatch/topfeed/topfeed_final_filter.h
        ju-seatch/topfeed/topfeed_plugin_cityhot.cc
        ju-seatch/topfeed/topfeed_plugin_cityhot.h
        ju-seatch/topfeed/topfeed_query_rewriter.cc
        ju-seatch/topfeed/topfeed_query_rewriter.h
        ju-seatch/topfeed/topfeed_scorer.cc
        ju-seatch/topfeed/topfeed_scorer.h
        ju-seatch/unise/index/annotation_manager.cc
        ju-seatch/unise/index/annotation_manager.h
        ju-seatch/unise/index/base_builder.cc
        ju-seatch/unise/index/base_builder.h
        ju-seatch/unise/index/compact_forward_index.cc
        ju-seatch/unise/index/compact_forward_index.h
        ju-seatch/unise/index/das_inc_builder.cc
        ju-seatch/unise/index/das_inc_builder.h
        ju-seatch/unise/index/dimension_doc_base_builder.cc
        ju-seatch/unise/index/dimension_doc_base_builder.h
        ju-seatch/unise/index/dimension_doc_manager.cc
        ju-seatch/unise/index/dimension_doc_manager.h
        ju-seatch/unise/index/doc_base_builder.cc
        ju-seatch/unise/index/doc_base_builder.h
        ju-seatch/unise/index/doc_builder.cc
        ju-seatch/unise/index/doc_builder.h
        ju-seatch/unise/index/doc_hit_list.h
        ju-seatch/unise/index/fact_doc_base_builder.cc
        ju-seatch/unise/index/fact_doc_base_builder.h
        ju-seatch/unise/index/fix_post_list.cc
        ju-seatch/unise/index/fix_post_list.h
        ju-seatch/unise/index/fix_time_array.cc
        ju-seatch/unise/index/fix_time_array.h
        ju-seatch/unise/index/forward_index.h
        ju-seatch/unise/index/general_doc_factory.cc
        ju-seatch/unise/index/general_doc_factory.h
        ju-seatch/unise/index/general_fact_doc.h
        ju-seatch/unise/index/index.cc
        ju-seatch/unise/index/index.h
        ju-seatch/unise/index/mem_forward_index.cc
        ju-seatch/unise/index/mem_forward_index.h
        ju-seatch/unise/index/real_time_doc_hit_list.cc
        ju-seatch/unise/index/real_time_doc_hit_list.h
        ju-seatch/unise/index/repository_manager.cc
        ju-seatch/unise/index/repository_manager.h
        ju-seatch/unise/index/token_hit.cc
        ju-seatch/unise/index/token_hit.h
        ju-seatch/unise/index/token_list.cc
        ju-seatch/unise/index/token_list.h
        ju-seatch/unise/retri/and_iterator.cc
        ju-seatch/unise/retri/and_iterator.h
        ju-seatch/unise/retri/annotation_filter.cc
        ju-seatch/unise/retri/annotation_filter.h
        ju-seatch/unise/retri/backend_query_builder.cc
        ju-seatch/unise/retri/backend_query_builder.h
        ju-seatch/unise/retri/blacklist_filter.cc
        ju-seatch/unise/retri/blacklist_filter.h
        ju-seatch/unise/retri/branch_iterator.cc
        ju-seatch/unise/retri/branch_iterator.h
        ju-seatch/unise/retri/buildin_filter.cc
        ju-seatch/unise/retri/buildin_filter.h
        ju-seatch/unise/retri/default_comparator.cc
        ju-seatch/unise/retri/default_comparator.h
        ju-seatch/unise/retri/demo_cluster.cc
        ju-seatch/unise/retri/demo_cluster.h
        ju-seatch/unise/retri/doc_match_info_proxy.cc
        ju-seatch/unise/retri/doc_match_info_proxy.h
        ju-seatch/unise/retri/empty_iterator.cc
        ju-seatch/unise/retri/empty_iterator.h
        ju-seatch/unise/retri/forward_iterator.h
        ju-seatch/unise/retri/general_cluster.cc
        ju-seatch/unise/retri/general_cluster.h
        ju-seatch/unise/retri/general_result_filler.cc
        ju-seatch/unise/retri/general_result_filler.h
        ju-seatch/unise/retri/general_scorer.cc
        ju-seatch/unise/retri/general_scorer.h
        ju-seatch/unise/retri/leaf_iterator.cc
        ju-seatch/unise/retri/leaf_iterator.h
        ju-seatch/unise/retri/matched_doc_internal.cc
        ju-seatch/unise/retri/matched_doc_internal.h
        ju-seatch/unise/retri/matched_node.cc
        ju-seatch/unise/retri/not_iterator.cc
        ju-seatch/unise/retri/not_iterator.h
        ju-seatch/unise/retri/or_iterator.cc
        ju-seatch/unise/retri/or_iterator.h
        ju-seatch/unise/retri/result_cluster_handler.cc
        ju-seatch/unise/retri/result_cluster_handler.h
        ju-seatch/unise/retri/result_filter_handler.cc
        ju-seatch/unise/retri/result_filter_handler.h
        ju-seatch/unise/retri/result_manager.cc
        ju-seatch/unise/retri/result_manager.h
        ju-seatch/unise/retri/result_retrievor.cc
        ju-seatch/unise/retri/result_retrievor.h
        ju-seatch/unise/retri/scorer_handler.cc
        ju-seatch/unise/retri/scorer_handler.h
        ju-seatch/unise/retri/search_context.cc
        ju-seatch/unise/retri/unise_plugin.cc
        ju-seatch/unise/serve/frontend/ctpl/binlog.ctpl.h
        ju-seatch/unise/serve/frontend/ctpl/default.ctpl.h
        ju-seatch/unise/serve/frontend/ctpl/index.ctpl.h
        ju-seatch/unise/serve/frontend/ctpl/monitor.ctpl.h
        ju-seatch/unise/serve/frontend/ctpl/search_engine.ctpl.h
        ju-seatch/unise/serve/frontend/binlog_processor.cc
        ju-seatch/unise/serve/frontend/binlog_processor.h
        ju-seatch/unise/serve/frontend/index_processor.cc
        ju-seatch/unise/serve/frontend/index_processor.h
        ju-seatch/unise/serve/frontend/monitor_processor.cc
        ju-seatch/unise/serve/frontend/monitor_processor.h
        ju-seatch/unise/serve/frontend/search_engine_processor.cc
        ju-seatch/unise/serve/frontend/search_engine_processor.h
        ju-seatch/unise/serve/frontend/unise_frontend.cc
        ju-seatch/unise/serve/frontend/unise_frontend.h
        ju-seatch/unise/serve/default_result_adapter.cc
        ju-seatch/unise/serve/default_result_adapter.h
        ju-seatch/unise/serve/default_search_handler.cc
        ju-seatch/unise/serve/default_search_handler.h
        ju-seatch/unise/serve/engine_unit_manager.cc
        ju-seatch/unise/serve/engine_unit_manager.h
        ju-seatch/unise/serve/query_rewriter.cc
        ju-seatch/unise/serve/real_engine_unit.cc
        ju-seatch/unise/serve/real_engine_unit.h
        ju-seatch/unise/serve/search_engine.cc
        ju-seatch/unise/serve/search_engine.h
        ju-seatch/unise/serve/search_handler.cc
        ju-seatch/unise/serve/search_handler_helper.cc
        ju-seatch/unise/serve/search_handler_helper.h
        ju-seatch/unise/serve/serve_impl.h
        ju-seatch/unise/serve/veu_search_handler.cc
        ju-seatch/unise/serve/veu_search_handler.h
        ju-seatch/unise/serve/virtual_engine_unit.cc
        ju-seatch/unise/serve/virtual_engine_unit.h
        ju-seatch/unise/tools/base_index_generator.cc
        ju-seatch/unise/unise/asl_wordseg.h
        ju-seatch/unise/unise/base.h
        ju-seatch/unise/unise/basictypes.h
        ju-seatch/unise/unise/boost_wrap.h
        ju-seatch/unise/unise/callback.h
        ju-seatch/unise/unise/cluster_template.h
        ju-seatch/unise/unise/comparator.h
        ju-seatch/unise/unise/delay_callback.h
        ju-seatch/unise/unise/delayed.h
        ju-seatch/unise/unise/dimension_doc.h
        ju-seatch/unise/unise/doc_factory.h
        ju-seatch/unise/unise/engine_unit.h
        ju-seatch/unise/unise/fact_doc.h
        ju-seatch/unise/unise/factory.h
        ju-seatch/unise/unise/global_handler.h
        ju-seatch/unise/unise/matched_doc.h
        ju-seatch/unise/unise/matched_node.h
        ju-seatch/unise/unise/pbrpc_client.h
        ju-seatch/unise/unise/query_rewriter.h
        ju-seatch/unise/unise/result_adapter.h
        ju-seatch/unise/unise/result_cluster.h
        ju-seatch/unise/unise/result_filler.h
        ju-seatch/unise/unise/result_filter.h
        ju-seatch/unise/unise/scorer.h
        ju-seatch/unise/unise/search_context.h
        ju-seatch/unise/unise/search_handler.h
        ju-seatch/unise/unise/serialization.h
        ju-seatch/unise/unise/singleton.h
        ju-seatch/unise/unise/skiplist.h
        ju-seatch/unise/unise/state_monitor.h
        ju-seatch/unise/unise/thread.h
        ju-seatch/unise/unise/unise_plugin.h
        ju-seatch/unise/unise/util.h
        ju-seatch/unise/util/http_server/http_server.cc
        ju-seatch/unise/util/http_server/http_server.h
        ju-seatch/unise/util/asl_wordseg.cc
        ju-seatch/unise/util/das_loader.cc
        ju-seatch/unise/util/das_loader.h
        ju-seatch/unise/util/delayed.cc
        ju-seatch/unise/util/event.h
        ju-seatch/unise/util/factory.cc
        ju-seatch/unise/util/file.h
        ju-seatch/unise/util/file_monitor.cc
        ju-seatch/unise/util/file_monitor.h
        ju-seatch/unise/util/global_init.cc
        ju-seatch/unise/util/global_init.h
        ju-seatch/unise/util/hash_tables.h
        ju-seatch/unise/util/inotify.cc
        ju-seatch/unise/util/inotify.h
        ju-seatch/unise/util/masf_mempool.cc
        ju-seatch/unise/util/masf_mempool.h
        ju-seatch/unise/util/queue.h
        ju-seatch/unise/util/state_monitor.cc
        ju-seatch/unise/util/state_monitor.h
        ju-seatch/unise/util/util.cc
        ju-seatch/unise/util/util.h
        ju-seatch/unise/serve_main.cc
        proto/read.cpp
        proto/world.pb.cc
        proto/world.pb.h
        proto/write.cpp
        source/c11/1/add.cc
        source/c11/1/add_item.cc
        source/c11/1/add_item2.cc
        source/c11/1/avg_price.cc
        source/c11/1/for_ex.cc
        source/c11/1/forcount.cc
        source/c11/1/item_io.cc
        source/c11/1/main_only.cc
        source/c11/1/mysum.cc
        source/c11/1/occurs.cc
        source/c11/1/Sales_item.h
        source/c11/1/whilecount.cc
        source/c11/10/absInt.cc
        source/c11/10/accum.cc
        source/c11/10/accum4.cc
        source/c11/10/avg_price.cc
        source/c11/10/bind2.cc
        source/c11/10/elimDups.cc
        source/c11/10/equal.cc
        source/c11/10/equiv-istream-iter.cc
        source/c11/10/inserters.cc
        source/c11/10/iostream_iter.cc
        source/c11/10/lambda.cc
        source/c11/10/newcount-size.cc
        source/c11/10/ostreamIter2.cc
        source/c11/10/rcomma.cc
        source/c11/10/rev-iters.cc
        source/c11/10/reverse-iter.cc
        source/c11/10/reverse.cc
        source/c11/10/sortSI.cc
        source/c11/10/use-istream-iter.cc
        source/c11/10/use_find.cc
        source/c11/11/erasemap.cc
        source/c11/11/map1.cc
        source/c11/11/multimap.cc
        source/c11/11/pair.cc
        source/c11/11/restricted_count.cc
        source/c11/11/setOps.cc
        source/c11/11/unorderedWordCount.cc
        source/c11/11/wcEx.cc
        source/c11/11/word_count.cc
        source/c11/11/word_transform.cc
        source/c11/12/allocPtr.cc
        source/c11/12/allocSP.cc
        source/c11/12/Foo.h
        source/c11/12/oknew.cc
        source/c11/12/querymain.cc
        source/c11/12/QueryResult.h
        source/c11/12/release.cc
        source/c11/12/StrBlob.h
        source/c11/12/TextQuery.cc
        source/c11/12/TextQuery.h
        source/c11/12/unique.cc
        source/c11/12/UP.cc
        source/c11/12/usealloc.cc
        source/c11/12/usealloc2.cc
        source/c11/12/useBlob.cc
        source/c11/12/weak.cc
        source/c11/13/copyNoMove.cc
        source/c11/13/Folder.cc
        source/c11/13/Folder.h
        source/c11/13/FolderMain.cc
        source/c11/13/HasPtrUseCount.cc
        source/c11/13/HasPtrValueLike.cc
        source/c11/13/moveHP.cc
        source/c11/13/serial.cc
        source/c11/13/small2_SI.h
        source/c11/13/small_SI.h
        source/c11/13/StrFolder.cc
        source/c11/13/StrFolder.h
        source/c11/13/StrFolderMain.cc
        source/c11/13/String.cc
        source/c11/13/String.h
        source/c11/13/StrVec.cc
        source/c11/13/StrVec.h
        source/c11/13/substr.cc
        source/c11/13/useStrVec.cc
        source/c11/14/absInt.cc
        source/c11/14/add.cc
        source/c11/14/calc.cc
        source/c11/14/directcall.cc
        source/c11/14/fcnobj.cc
        source/c11/14/newcount-size.cc
        source/c11/14/readStr.cc
        source/c11/14/Sales_data.cc
        source/c11/14/Sales_data.h
        source/c11/15/and_orQueryTest.cc
        source/c11/15/andQueryTest.cc
        source/c11/15/Basket.cc
        source/c11/15/Basket.h
        source/c11/15/Basket_main.cc
        source/c11/15/get_print.cc
        source/c11/15/Query.cc
        source/c11/15/Query.h
        source/c11/15/Quote.cc
        source/c11/15/Quote.h
        source/c11/15/sample.cc
        source/c11/15/scope.cc
        source/c11/15/useQuote.cc
        source/c11/15/vecBasket.cc
        source/c11/15/virtualsNscope.cc
        source/c11/15/wordQueryTest.cc
        source/c11/16/array-parms4.cc
        source/c11/16/Array.cc
        source/c11/16/Blob.h
        source/c11/16/build.cc
        source/c11/16/compare.cc
        source/c11/16/compare.h
        source/c11/16/compareDef.cc
        source/c11/16/compareSpec.cc
        source/c11/16/debug.cc
        source/c11/16/debug_rep.h
        source/c11/16/DebugDelete.h
        source/c11/16/multiset.cc
        source/c11/16/overSpec.cc
        source/c11/16/qm.cc
        source/c11/16/Sales_data.cc
        source/c11/16/Sales_data.h
        source/c11/16/SP.cc
        source/c11/16/special.cc
        source/c11/16/useBlob.cc
        source/c11/16/useChcking.cc
        source/c11/16/Vec.h
        source/c11/16/Vecmain.cc
        source/c11/17/badgetc.cc
        source/c11/17/bits.cc
        source/c11/17/findbook.cc
        source/c11/17/game.cc
        source/c11/17/getc.cc
        source/c11/17/getput.cc
        source/c11/17/manips.cc
        source/c11/17/no-skipws.cc
        source/c11/17/normalInts.cc
        source/c11/17/ourRandom.h
        source/c11/17/point.cc
        source/c11/17/prec.cc
        source/c11/17/rand1.cc
        source/c11/17/rand2.cc
        source/c11/17/rand4.cc
        source/c11/17/rand6.cc
        source/c11/17/seed.cc
        source/c11/17/seek.cc
        source/c11/17/setw.cc
        source/c11/17/skipws.cc
        source/c11/17/tuple.cc
        source/c11/18/Animal.cc
        source/c11/18/Animal.h
        source/c11/18/Animal_virtual_baseVers.h
        source/c11/18/book.cc
        source/c11/18/bookexcept.h
        source/c11/18/class.cc
        source/c11/18/ex-over.cc
        source/c11/18/inherit.cc
        source/c11/18/mi-scope.cc
        source/c11/18/over.cc
        source/c11/18/over2.cc
        source/c11/18/Sales_data.cc
        source/c11/18/usingDirective.cc
        source/c11/18/virt-inherit.cc
        source/c11/19/bitfields.cc
        source/c11/19/calc.cc
        source/c11/19/dyn_cast.cc
        source/c11/19/enum-match.cc
        source/c11/19/enum.cc
        source/c11/19/memFN-bind.cc
        source/c11/19/Screen.cc
        source/c11/19/Screen.h
        source/c11/19/TextQuery.h
        source/c11/19/tok2.cc
        source/c11/19/Token.h
        source/c11/19/typeid.cc
        source/c11/19/useScreen.cc
        source/c11/2/compounddecls.cc
        source/c11/2/convs.cc
        source/c11/2/dbl_ptr.cc
        source/c11/2/decl-ex.cc
        source/c11/2/escape.cc
        source/c11/2/inits.cc
        source/c11/2/literals.cc
        source/c11/2/ref-ex.cc
        source/c11/2/Sales_data.cc
        source/c11/2/Sales_data.h
        source/c11/2/scope_levels.cc
        source/c11/2/unsigned.cc
        source/c11/3/add_using.cc
        source/c11/3/arrayScores.cc
        source/c11/3/cctype.cc
        source/c11/3/char_repl.cc
        source/c11/3/cstring_hdr.cc
        source/c11/3/getline.cc
        source/c11/3/hexify.cc
        source/c11/3/multidim.cc
        source/c11/3/ptr_traversal2.cc
        source/c11/3/square.cc
        source/c11/3/strcompare.cc
        source/c11/3/string_add.cc
        source/c11/3/string_io.cc
        source/c11/3/string_io2.cc
        source/c11/3/string_size.cc
        source/c11/3/string_size2.cc
        source/c11/3/string_size3.cc
        source/c11/3/vec_decls.cc
        source/c11/3/vecScores.cc
        source/c11/3/vecStrings2.cc
        source/c11/3/vecSubs.cc
        source/c11/3/word_echo.cc
        source/c11/4/arith-ex.cc
        source/c11/4/arraysizeof.cc
        source/c11/4/cond.cc
        source/c11/4/incr.cc
        source/c11/4/int-div.cc
        source/c11/4/oofe.cc
        source/c11/4/overflow.cc
        source/c11/4/prec.cc
        source/c11/4/shift-prec.cc
        source/c11/4/sizeof_pgm.cc
        source/c11/4/unaryOps.cc
        source/c11/4/vec_init.cc
        source/c11/4/warn_dbltoint.cc
        source/c11/5/add_item2.cc
        source/c11/5/doWhile.cc
        source/c11/5/guess.cc
        source/c11/5/ifgrades.cc
        source/c11/5/othercnt.cc
        source/c11/5/rangefor.cc
        source/c11/5/vowels.cc
        source/c11/6/arrRet.cc
        source/c11/6/count-calls.cc
        source/c11/6/errMsg_initList.cc
        source/c11/6/fact.cc
        source/c11/6/fcnptrRet.cc
        source/c11/6/good_printmain.cc
        source/c11/6/inline_shorter.cc
        source/c11/6/LocalMath.cc
        source/c11/6/LocalMath.h
        source/c11/6/mainmath.cc
        source/c11/6/mainret.cc
        source/c11/6/make_plural.h
        source/c11/6/mk_plural.cc
        source/c11/6/printFcns.h
        source/c11/6/ref-fcn.cc
        source/c11/6/refparms.cc
        source/c11/6/refret-ex.cc
        source/c11/6/reset.cc
        source/c11/6/stl-arr-fcns.cc
        source/c11/6/use_mk_plural.cc
        source/c11/6/usefcnptr.cc
        source/c11/6/wdebug.cc
        source/c11/7/Account.cc
        source/c11/7/Account.h
        source/c11/7/add_item.cc
        source/c11/7/avg_price.cc
        source/c11/7/Debug.cc
        source/c11/7/Debug.h
        source/c11/7/Sales_data.cc
        source/c11/7/Sales_data.h
        source/c11/7/Screen.h
        source/c11/7/useAccount.cc
        source/c11/7/useDebug.cc
        source/c11/7/useScreen.cc
        source/c11/7/WindowMgr.h
        source/c11/8/add_item.cc
        source/c11/8/add_itemV2.cc
        source/c11/8/buf.cc
        source/c11/8/clearIO.cc
        source/c11/8/fileIO.cc
        source/c11/8/sstream.cc
        source/c11/9/capacity.cc
        source/c11/9/erase1.cc
        source/c11/9/erase2.cc
        source/c11/9/find-str.cc
        source/c11/9/find_ops.cc
        source/c11/9/refreshIter.cc
        source/c11/9/stack.cc
        source/c11/9/str_assignOps.cc
        source/c11/9/StrConvs.h
        source/c11/9/substr.cc
        source/c11/9/useConvs.cc
        test/h/one.h
        test/h/print.h
        test/a.h
        test/b.cpp
        test/c.cpp
        test/c.i
        test/class.cpp
        test/factory.h
        test/factory.i
        test/int.cpp
        test/main.cpp
        test/one.cpp
        test/one_main.cpp
        test/one_main.i
        test/origin.cpp
        test/pj.cpp
        test/print.cpp
        test/singleton.h
        test/sint.cpp
        test/size.cpp
        test/sprint.cpp
        test/sprintf.cpp
        test/string.cpp
        test/test.cpp
        test/virtual.cpp
        test/virtual.i
        test/x.cpp
        test/xxyy.cpp
        Sales_item.h 15/text/include/TextQuery.h 15/text/include/QueryResult.h 15/text/src/TextQuery.cpp 15/class/a.h 15/class/b.h 15/class/c.cpp 15/class/m.cpp 15/text/include/Query.h 15/text/src/Query.cpp 15/text/src/WordQuery.cpp 15/text/src/OrQuery.cpp 15/text/src/AndQuery.cpp 15/text/src/NotQuery.cpp 15/text/main.cpp 15/cmake/t1/main.cpp)
