CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(t1)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/qbin)
AUX_SOURCE_DIRECTORY(. SRCS)
ADD_SUBDIRECTORY(src)
ADD_EXECUTABLE(t1 ${SRCS})
TARGET_LINK_LIBRARIES(t1 func)
INSTALL(FILES readme DESTINATION share/doc/cmake/t2)
INSTALL(PROGRAMS runhello.sh DESTINATION qbin)
INSTALL(TARGETS t1 DESTINATION qbin)
INSTALL(DIRECTORY doc/ DESTINATION share/doc/cmake/t2)