SET(SRCS hello.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
ADD_LIBRARY(hello SHARED  ${SRCS})
ADD_LIBRARY(hello_static STATIC  ${SRCS})
SET_TARGET_PROPERTIES(hello PRCPERTIES CLEAN_DIRECT_OUT 1)
SET_TARGET_PROPERTIES(hello_static PRCPERTIES CLEAN_DIRECT_OUT 1)
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME hello)
GET_TARGET_PROPERTY(STATIC_NAME hello_static OUTPUT_NAME)
MESSAGE(STATUS "static name:"&{STATIC_NAMER})