SET(SRCS hello.cpp)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
ADD_LIBRARY(hello SHARED  ${SRCS})
ADD_LIBRARY(hello_static STATIC  ${SRCS})
#设置不要同名覆盖，现在不需要了
#SET_TARGET_PROPERTIES(hello PROPERTIES CLEAN_DIRECT_OUTPUT 1)
#SET_TARGET_PROPERTIES(hello_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
#add_library不能添加同名的静态、动态库。需要SET_TARGET_PROPERTIES重命名
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME hello)
#获取别名
GET_TARGET_PROPERTY(STATIC_NAME hello_static OUTPUT_NAME)
MESSAGE(STATUS "static name:" ${STATIC_NAME})
#指定版本号
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 3.2 SOVERSION 2)
#安装
INSTALL(TARGETS
        hello hello_static
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib
        )
INSTALL(FILES
        hello.h
        DESTINATION include/hello
        )