SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
ADD_EXECUTABLE(hello main.cpp)
FIND_PATH(header hello.h)
if (header)
    MESSAGE(STATUS "FIND HEADER")
    INCLUDE_DIRECTORIES(${header})
else ()
    MESSAGE(FATAL_ERROR "NOT FIND HEADER")
endif (header)
FIND_LIBRARY(libhello libhello.so)
if (libhello)
    MESSAGE(STATUS "FIND LIB")
    LINK_DIRECTORIES(${libhello})
else ()
    MESSAGE(FATAL_ERROR "NOT FIND LIB")
endif (libhello)
TARGET_LINK_LIBRARIES(hello libhello.a)
