SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

#FIND_PATH(header hello.h)
#if (header)
#    MESSAGE(STATUS "FIND HEADER:" ${header})
#    INCLUDE_DIRECTORIES(${header})
#else ()
#    MESSAGE(FATAL_ERROR "NOT FIND HEADER")
#endif (header)
#FIND_LIBRARY(libhello libhello.so)
#if (libhello)
#    MESSAGE(STATUS "FIND LIB:" ${libhello})
#    LINK_LIBRARIES(${libhello})
#    #LINK_DIRECTORIES(${libhello})
#else ()
#    MESSAGE(FATAL_ERROR "NOT FIND LIB")
#endif (libhello)
ADD_EXECUTABLE(hello main.cpp)
#TARGET_LINK_LIBRARIES(hello libhello.a)
